--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>Registraion Form</title>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <form action="#" class="form">
@@ -15,29 +22,161 @@
       <div class="progressbar">
         <div class="progress" id="progress"></div>
         
-        <div
-          class="progress-step progress-step-active"
-          data-title="Intro"
-        ></div>
+        <div class="progress-step progress-step-active" data-title="Intro"></div>
         <div class="progress-step" data-title="Contact"></div>
         <div class="progress-step" data-title="ID"></div>
         <div class="progress-step" data-title="Password"></div>
+        <div class="progress-step" data-title="Password1"></div>
+        <div class="progress-step" data-title="Password2"></div>
       </div>
 
       <!-- Steps -->
       <div class="form-step form-step-active">
-        <div class="input-group">
-          <label for="username">Username</label>
-          <input type="text" name="username" id="username" />
+
+
+<!--        <div class="input-group">-->
+<!--          <label for="username">Username</label>-->
+<!--          <input type="text" name="username" id="username" />-->
+<!--        </div>-->
+<!--        <div class="input-group">-->
+<!--          <label for="position">Position</label>-->
+<!--          <input type="text" name="position" id="position" />-->
+<!--        </div>-->
+
+        <h6> How many kilogrames would you like to lose? </h6>
+
+
+        <div class="form-check checkbox_div">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+          <label class="form-check-label" for="exampleRadios1">
+              1-3 kg
+          </label>
         </div>
-        <div class="input-group">
-          <label for="position">Position</label>
-          <input type="text" name="position" id="position" />
+        <div class="form-check checkbox_div">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+          <label class="form-check-label" for="exampleRadios2">
+            3-5 kg
+          </label>
         </div>
+        <div class="form-check checkbox_div">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" >
+          <label class="form-check-label" for="exampleRadios3">
+            5-710kg
+          </label>
+        </div>
+
+        <div class="form-check checkbox_div">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" >
+          <label class="form-check-label" for="exampleRadios3">
+            10-20 kg
+          </label>
+        </div>
+
+
+        <div class="form-check checkbox_div">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" >
+          <label class="form-check-label" for="exampleRadios3">
+            20 kg or more
+          </label>
+        </div>
+
+
         <div class="">
           <a href="#" class="btn btn-next width-50 ml-auto">Next</a>
         </div>
       </div>
+
+
+
+      <div class="form-step">
+
+<!--     -->
+<!--        <div class="input-group">-->
+<!--          <label for="phone">Phone</label>-->
+<!--          <input type="text" name="phone" id="phone" />-->
+<!--        </div>-->
+<!--        <div class="input-group">-->
+<!--          <label for="email">Email</label>-->
+<!--          <input type="text" name="email" id="email" />-->
+<!--        </div>-->
+
+
+
+        <h6> Choose Gender </h6>
+
+        <div class="form-check checkbox_div">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+          <label class="form-check-label" for="exampleRadios1">
+            Man
+          </label>
+        </div>
+        <div class="form-check checkbox_div">
+          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+          <label class="form-check-label" for="exampleRadios2">
+            Woman
+          </label>
+        </div>
+
+        <div class="btns-group">
+          <a href="#" class="btn btn-prev">Previous</a>
+          <a href="#" class="btn btn-next">Next</a>
+        </div>
+
+
+      </div>
+
+
+      <div class="form-step">
+
+
+
+        <h2> Enter Your Weight ,Height, and name </h2>
+
+
+          <div class="input-group">
+            <label for="phone">Body Height (in kg)</label>
+            <input type="text" name="phone" id="phone" />
+          </div>
+          <div class="input-group">
+            <label for="email">Body Weight (in kg)</label>
+            <input type="text" name="email" id="email" />
+          </div>
+
+        <div class="input-group">
+          <label for="email"> @Name </label>
+          <input type="text" name="email" id="email" />
+        </div>
+
+        <div class="btns-group">
+          <a href="#" class="btn btn-prev">Previous</a>
+          <a href="#" class="btn btn-next">Next</a>
+        </div>
+      </div>
+
+
+
+      <div class="form-step">
+
+        <div class="input-group">
+          <label for="phone">Phone</label>
+          <input type="text" name="phone" id="phone" />
+        </div>
+        <div class="input-group">
+          <label for="email">Email</label>
+          <input type="text" name="email" id="email" />
+        </div>
+        <div class="btns-group">
+          <a href="#" class="btn btn-prev">Previous</a>
+          <a href="#" class="btn btn-next">Next</a>
+        </div>
+
+
+
+      </div>
+
+
+
+
       <div class="form-step">
         <div class="input-group">
           <label for="phone">Phone</label>
@@ -52,6 +191,9 @@
           <a href="#" class="btn btn-next">Next</a>
         </div>
       </div>
+
+
+
       <div class="form-step">
         <div class="input-group">
           <label for="dob">Date of Birth</label>
